--- a/views/dealsrecommend.ejs
+++ b/views/dealsrecommend.ejs
@@ -121,19 +121,6 @@
         <script src="../assets/js/jquery.min.js"></script>         
         <script src="../assets/js/popper.js"></script>         
         <script src="../assets/bootstrap/js/bootstrap.min.js"></script>    
-        <script src="assets/js/auntie.js"></script>                      
-        <script>
-        let editor;
-        ClassicEditor
-            .create( document.querySelector( '#edesc' ), {
-                toolbar: ['bold', 'italic', 'link', 'bulletedList', 'numberedList', 'blockQuote' ],
-            })
-            .then( initEditor => {
-                editor = initEditor;
-            } )
-            .catch( error => {
-                    console.error( error );
-        } );
-        </script>         
+        <script src="../assets/js/auntie.js"></script>                      
     </body>     
 </html>
