--- a/views/eventsrecommend.ejs
+++ b/views/eventsrecommend.ejs
@@ -121,20 +121,7 @@
         <script src="../assets/js/jquery.min.js"></script>         
         <script src="../assets/js/popper.js"></script>         
         <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
-        <script src="assets/js/auntie.js"></script>                         
-        <script>
-
-        let editor;
-        ClassicEditor
-            .create( document.querySelector( '#edesc' ), {
-                toolbar: ['bold', 'italic', 'link', 'bulletedList', 'numberedList', 'blockQuote' ],
-            })
-            .then( initEditor => {
-                editor = initEditor;
-            } )
-            .catch( error => {
-                    console.error( error );
-        } );
-        </script>         
+        <script src="../assets/js/auntie.js"></script>  
+        <script src="../assets/js/publish.js"></script>                                                   
     </body>     
 </html>
