--- a/views/post.ejs
+++ b/views/post.ejs
@@ -112,7 +112,7 @@
                             <div class="d-flex justify-content-center align-items-center col-6 " style="padding-top: 50%;">
                                 <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; background-color: #d7d7d7; border-radius: 15px;" class="d-inline-flex justify-content-center align-items-center m-1">
                                     <img id="img-0" src="assets/images/image.png" style="width: 40%; height: 40%;"/>
-                                    <input id="upload-0" type="file" name="file" accept="image/png, image/jpeg" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; cursor: pointer;"/>
+                                    <input class="prod-thumb" id="upload-0" type="file" name="file" accept="image/png, image/jpeg" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; cursor: pointer;"/>
                                 </div>
                                 <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; border-radius: 15px; pointer-events: none;" class="d-inline-flex justify-content-center align-items-center m-1">
                                     <img id="preview-0" src="" style="width: 100%; height: auto;" class="img-fluid img-rounded img-responsive p-1"/>
@@ -121,7 +121,7 @@
                             <div class="d-flex justify-content-center align-items-center col-6 " style="padding-top: 50%;">
                                 <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; background-color: #d7d7d7; border-radius: 15px;" class="d-inline-flex justify-content-center align-items-center m-1">
                                     <img id="img-1" src="assets/images/image.png" style="width: 40%; height: 40%;"/>
-                                    <input id="upload-1" type="file" name="file" accept="image/png, image/jpeg" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; cursor: pointer;"/>
+                                    <input class="prod-thumb" id="upload-1" type="file" name="file" accept="image/png, image/jpeg" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; cursor: pointer;"/>
                                 </div>
                                 <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; border-radius: 15px; pointer-events: none;" class="d-inline-flex justify-content-center align-items-center m-1">
                                     <img id="preview-1" src="" style="width: 100%; height: auto;" class="img-fluid img-rounded img-responsive p-1"/>
@@ -132,7 +132,7 @@
                             <div class="d-flex justify-content-center align-items-center col-6 " style="padding-top: 50%;">
                                 <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; background-color: #d7d7d7; border-radius: 15px;" class="d-inline-flex justify-content-center align-items-center m-1">
                                     <img id="img-2" src="assets/images/image.png" style="width: 40%; height: 40%;"/>
-                                    <input id="upload-2" type="file" name="file" accept="image/png, image/jpeg" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; cursor: pointer;"/>
+                                    <input class="prod-thumb" id="upload-2" type="file" name="file" accept="image/png, image/jpeg" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; cursor: pointer;"/>
                                 </div>
                                 <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; border-radius: 15px; pointer-events: none;" class="d-inline-flex justify-content-center align-items-center m-1">
                                     <img id="preview-2" src="" style="width: 100%; height: auto;" class="img-fluid img-rounded img-responsive p-1"/>
@@ -141,7 +141,7 @@
                             <div class="d-flex justify-content-center align-items-center col-6 " style="padding-top: 50%;">
                                 <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; background-color: #d7d7d7; border-radius: 15px;" class="d-inline-flex justify-content-center align-items-center m-1">
                                     <img id="img-3" src="assets/images/image.png" style="width: 40%; height: 40%;"/>
-                                    <input id="upload-3" type="file" name="file" accept="image/png, image/jpeg" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; cursor: pointer;"/>
+                                    <input class="prod-thumb" id="upload-3" type="file" name="file" accept="image/png, image/jpeg" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; cursor: pointer;"/>
                                 </div>
                                 <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; border-radius: 15px; pointer-events: none;" class="d-inline-flex justify-content-center align-items-center m-1">
                                     <img id="preview-3" src="" style="width: 100%; height: auto;" class="img-fluid img-rounded img-responsive p-1"/>
@@ -216,125 +216,6 @@
         <script src="assets/js/jquery.flexdatalist.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.4.3/cropper.min.js"></script>
         <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>        
-        <script src="assets/js/auntie.js"></script>                
- 
-        <script>
-        let editor;
-        ClassicEditor
-            .create( document.querySelector( '#pdesc' ), {
-                toolbar: ['bold', 'italic', 'link', 'bulletedList', 'numberedList', 'blockQuote' ],
-            })
-            .then( initEditor => {
-                editor = initEditor;
-            } )
-            .catch( error => {
-                    console.error( error );
-            } );
-        var cropper0;
-        var crop0;
-        var curPos;
-        var inputInfo = [];
-
-        $(document).ready(function () {
-            $('[data-role="dynamic-fields"]').on('click', '[data-role="add"]', function (e) {
-                e.preventDefault();
-                var container = $(this).closest('[data-role="dynamic-fields"]');
-                new_field_group = container.children().filter('.p-specs:first-child').clone();
-                new_field_group.find('input').each(function(){
-                    $(this).val('');
-                });
-                container.append(new_field_group);
-            });
-
-            $('[data-role="dynamic-fields"]').on('click', '[data-role="remove"]', function (e) {
-                e.preventDefault();
-                $(this).closest('.p-specs').remove();
-            });
-
-        });
-
-
-        $('input:file').on('change', function() {
-            curPos = this.id.match(/\d+/)[0];
-
-            var index = inputInfo.map(function(e) { return e.id; }).indexOf(curPos);
-            if(index < 0){
-                inputInfo.push({id: curPos, name: 'c-' + this.files[0].name, type:this.files[0].type });
-            }else{
-                inputInfo[index].name = 'c-' + this.files[0].name;
-                inputInfo[index].type = this.files[0].type;
-            }
-
-            var oFReader = new FileReader();
-            oFReader.readAsDataURL(this.files[0]);
-
-            if(cropper0!= null){
-                cropper0.destroy();
-            }
-
-            oFReader.onload = function (oFREvent) {    
-                $('#myModal').modal('show');
-                var image = document.getElementById('cropperImage');
-                image.src = oFREvent.target.result;
-            };   
-            this.value = null;
-        });
-      
-        $('#myModal').on('shown.bs.modal', function () {
-            var image = document.getElementById('cropperImage');
- 
-            cropper0 = new Cropper(image, {
-                    aspectRatio: 1 / 1,
-                    responsive: true
-            });
-        });
-
-        var showImg = document.getElementById('preview-0');  
-        var formData1  = $("form[id*='formData1']")[0];
-
-        $("#cropbtn").click(function() {
-            var index = inputInfo.map(function(e) { return e.id; }).indexOf(curPos);
-            var showImg = document.getElementById('preview-' + curPos);  
-            cropper0.getCroppedCanvas({
-                minWidth: 256,
-                minHeight: 256,
-                maxWidth: 4096,
-                maxHeight: 4096,
-                imageSmoothingEnabled: true,
-                imageSmoothingQuality: 'high',
-            }).toBlob((blob) => {              
-                const imagetemp = URL.createObjectURL(blob);
-                showImg.style.display = "block";
-                showImg.src = imagetemp;  
-                inputInfo[index].blob = blob;
-            }, inputInfo[index].type);
-        });  
-        
-        
-        function PostForm()
-        {
-            var data = new FormData($("form[id*='formData1']")[0]);
-            var descData = editor.getData();
-            data.set('pdesc', descData );
-
-            for(var i = 0; i< inputInfo.length; i++){
-                data.append("cdata", inputInfo[i].blob, inputInfo[i].name);
-            }
-
-            $.ajax({
-                url: '/post',
-                data: data,
-                cache: false,
-                contentType: false,
-                processData: false,
-                type: 'POST',
-                success: function(data, textStatus, jqXHR){
-                    window.location.href = data.redirect;
-                }
-            });
-        };
-
-       
-    </script>         
+        <script src="assets/js/auntie.js"></script>                     
     </body>     
 </html>
