--- a/views/search.ejs
+++ b/views/search.ejs
@@ -91,7 +91,7 @@
                 </div>                 
                 <div class="col-md-3 offcanvas-collapse"> 
                     <div class="card">
-                        <form id="eventFilter"  method="get" >
+                        <form id="searchFilter"  method="get" >
                             <article class="card-group-item">
                                 <header class="card-header">
                                     <h6 class="title">Location </h6>
@@ -146,53 +146,6 @@
         <script src="assets/js/jquery.min.js"></script>         
         <script src="assets/js/popper.js"></script>         
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>       
-        <script src="assets/js/auntie.js"></script>                     
-        <script>
-        $(document).ready(function () {
-            var query = window.location.search.substring(1);
-            var qs = parse_query_string(query);
-            console.log(qs);
-            var formFilter = document.getElementById("eventFilter");
-            var formLocDropdown = document.getElementById("qloc");
-
-            if(qs['loc']){
-                formLocDropdown.value = qs['loc'];
-            }
-            for (var key in qs) {
-
-                if (! formFilter.elements.namedItem(key)) {
-                    var preInput = document.createElement("input");
-                    preInput.setAttribute("type", "hidden");
-                    preInput.setAttribute("name", key);
-                    preInput.setAttribute("value", qs[key]);
-                    //append to form element that you want .
-                    formFilter.appendChild(preInput);
-                }
-            }
-        });
-
-        function parse_query_string(query) {
-            var vars = query.split("&");
-            var query_string = {};
-            for (var i = 0; i < vars.length; i++) {
-                var pair = vars[i].split("=");
-                var key = decodeURIComponent(pair[0]);
-                var value = decodeURIComponent(pair[1]);
-                // If first entry with this name
-                if (typeof query_string[key] === "undefined") {
-                query_string[key] = decodeURIComponent(value);
-                // If second entry with this name
-                } else if (typeof query_string[key] === "string") {
-                var arr = [query_string[key], decodeURIComponent(value)];
-                query_string[key] = arr;
-                // If third or later entry with this name
-                } else {
-                query_string[key].push(decodeURIComponent(value));
-                }
-            }
-            return query_string;
-        }
-
-    </script>         
+        <script src="assets/js/auntie.js"></script>                             
     </body>     
 </html>
