Add sharp. Corrected some mistakes in saving deals

--- a/views/promo.ejs
+++ b/views/promo.ejs
@@ -10,7 +10,7 @@
         <!-- Bootstrap core CSS -->         
         <link href="../../assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
         <link href="../../assets/css/auntie.css" rel="stylesheet"> 
-        <link href="assets/css/listing.css" rel="stylesheet">         
+        <link href="../../assets/css/listing.css" rel="stylesheet">         
     </head>     
     <body class="bg-light"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
@@ -115,11 +115,10 @@
         <!-- Bootstrap core JavaScript
     ================================================== -->         
         <!-- Placed at the end of the document so the pages load faster -->         
-        <script src="assets/js/jquery.min.js"></script>         
-        <script src="assets/js/popper.js"></script>         
-        <script src="assets/bootstrap/js/bootstrap.min.js"></script>         
-        <script src="assets/js/jquery.flexdatalist.min.js"></script>         
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.4.3/cropper.min.js"></script>         
-        <script src="assets/js/auntie.js"></script>                
+        <script src="../../assets/js/jquery.min.js"></script>         
+        <script src="../../assets/js/popper.js"></script>         
+        <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>         
+        <script src="../../assets/js/jquery.flexdatalist.min.js"></script>         
+        <script src="../../assets/js/auntie.js"></script>                
     </body>     
 </html>
