--- a/views/deals.ejs
+++ b/views/deals.ejs
@@ -66,27 +66,31 @@
         <div class="container"> 
             <div class="row" style="height: 30px;"></div>             
         </div>  
-        <button class="mdc-fab app-fab--absolute bg-danger" aria-label="add" onclick="location.href='/deals/recommend'">
-            <span class="mdc-fab__icon material-icons">add</span>
-        </button>       
+     
         <main role="main" class="container"> 
             <div class="row">                            
                 <div class="col-lg-9 col-md-12"> 
                     <% if(deals.length > 0) {%>
                         <% for(var i=0; i < deals.length; i++) { %>       
-                    <div class="card flex-md-row box-shadow h-md-250 flex-row mb-2"> 
-                        <div style="width: auto; height: auto; max-width: 30%; vertical-align: middle; min-width: 160px; min-height: 160px; padding-left: 0; padding-right: 0;" class="d-flex align-items-center col-4"> 
-                            <img src=<%= deals[i].filename %> alt="Event Poster" class="img-fluid ml-1"> 
-                        </div>                         
-                        <div class="card-body flex-column d-flex align-items-start"> 
-                            <h4 class="mb-0"><a href='/deals/promo/<%= deals[i].url %>'><%= deals[i].title %></a></h4> 
-                            <div class="mb-1 text-muted d-flex justify-content-between align-self-stretch">
-                                <p><%= deals[i].company %></p>
-                                <p><%= deals[i].start %> till <%= deals[i].end %></p>
-                            </div>
-                            <div class="card-text mb-auto"><%- deals[i].description %></div> 
-                        </div>                         
-                    </div>      
+                            <div class="card box-shadow h-md-250 mb-2 flex-md-row flex-column"> 
+                                <div class="row">
+                                    <div class="align-items-center d-flex col-md-4 pr-md-0 justify-content-center"> 
+                                        <img src=<%= deals[i].filename %> alt="Deals Poster" class="img-fluid"> 
+                                    </div>
+                                    <div  class="card-body flex-column d-flex align-items-start col-md-8 ml-1 mr-1 ml-md-0 mr-md-0"> 
+                                        <h4 class="mb-0"><a href='/deals/promo/<%= deals[i].url %>'><%= deals[i].title %></a></h4> 
+                                        <div class="mb-1 text-muted d-flex justify-content-between align-self-stretch">
+                                            <div class="row w-100">
+                                                <p class="col-md-6"><%= deals[i].company %></p>
+                                                <p class="pr-md-4 col-md-6 text-left text-md-right"><%= deals[i].start %> till <%= deals[i].end %></p>
+                                            </div>
+                                        </div>
+                                        <div class="card-text mb-auto">
+                                            <div class="card-text mb-auto"><%- deals[i].description %></div> 
+                                        </div>
+                                    </div>
+                                </div>     
+                            </div>   
                         <% } %>
                     <% } else { %> 
     
@@ -158,7 +162,10 @@
                     </div>
                 </div>                 
             </div>             
-        </main>         
+        </main>    
+        <button class="mdc-fab app-fab--absolute bg-danger" aria-label="add" onclick="location.href='/deals/recommend'">
+            <span class="mdc-fab__icon material-icons">add</span>
+        </button>       
         <!-- Bootstrap core JavaScript
     ================================================== -->         
         <!-- Placed at the end of the document so the pages load faster -->         
