--- a/views/register.ejs
+++ b/views/register.ejs
@@ -47,11 +47,11 @@
                 <div class="form-row"> 
                     <div class="form-group col-md-6"> 
                         <label for="email">Email</label>                         
-                        <input type="email" class="form-control" name="email" placeholder="Email"> 
+                        <input type="email" class="form-control" name="email" placeholder="Email" required> 
                     </div>                     
                     <div class="form-group col-md-6"> 
-                        <label for="password">Password</label>                         
-                        <input type="password" class="form-control" name="password" placeholder="Password"> 
+                        <label for="password">Password (minimum length 8)</label>                         
+                        <input type="password" class="form-control" minlength="8" name="password" placeholder="Password" required> 
                     </div>                     
                 </div>                 
                 <div class="form-group"> 
