--- a/views/promo.ejs
+++ b/views/promo.ejs
@@ -86,7 +86,7 @@
                                 </dd>                                 
                             </dl>                             
                             <dl class="param param-feature"> 
-                                <h6 class="mb-0"><a href='https://<%= promotion.outboundURL %>' target="_blank">Website</a></h6>                                
+                                <h6 class="mb-0"><a href='<%= promotion.outboundURL %>' target="_blank">Website</a></h6>                                
                             </dl>                             
                             <hr> 
                         </article>                         
